--- a/Swimmer_customer/app/src/main/res/layout/fragment_product_detail.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_product_detail.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="vm"
+            type="com.petpal.swimmer_customer.ui.product.ProductViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -75,7 +77,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="브랜드명"
+                        android:text="@{vm.rankingBrand}"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -87,7 +89,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="상품명"
+                        android:text="@{vm.rankingTitle}"
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         app:layout_constraintStart_toStartOf="@id/viewPager2Container"
@@ -98,7 +100,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="10,000원"
+                        android:text="@{vm.rankingPrice}"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold"
