design : [판매자용] 메인화면 UI 구현

--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_add.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_add.xml
@@ -41,7 +41,8 @@
                 android:id="@+id/textViewMainImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/prompt_main_image" />
+                android:text="@string/prompt_main_image"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -144,22 +145,57 @@
                     app:simpleItems="@array/categorySub1_1" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayoutTag"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:hint="@string/prompt_hashtag"
-                android:transitionGroup="true"
-                app:endIconMode="clear_text"
-                app:errorEnabled="false">
+                android:gravity="top"
+                android:orientation="horizontal">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/text_input_edit_text_hash_tag"
-                    android:layout_width="match_parent"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/textInputLayoutTag"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:inputType="text" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="1"
+                    android:hint="@string/prompt_hashtag"
+                    android:transitionGroup="true"
+                    app:endIconMode="clear_text"
+                    app:errorEnabled="false"
+                    app:helperText="@string/prompt_hashtag_helper"
+                    app:helperTextEnabled="true"
+                    app:helperTextTextColor="@color/md_theme_light_secondary">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/textInputEditTextHashTag"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <Button
+                    android:id="@+id/buttonAddHashTag"
+                    style="@style/Widget.Material3.Button.OutlinedButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="65dp"
+                    android:text="추가"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    app:cornerRadius="5dp" />
+
+            </LinearLayout>
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chipGroupHashTag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chipHashTag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </com.google.android.material.chip.ChipGroup>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayoutPrice"
@@ -186,7 +222,7 @@
                 android:hint="@string/prompt_product_description"
                 android:transitionGroup="true"
                 app:endIconMode="clear_text"
-                app:errorEnabled="false">
+                app:errorEnabled="false" >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/textInputEditTextDescription"
@@ -200,7 +236,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="@string/prompt_description_image" />
+                android:text="@string/prompt_description_image"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <LinearLayout
                 android:layout_width="match_parent"
