--- a/Swimmer_seller/app/src/main/res/layout/fragment_home.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_home.xml
@@ -57,9 +57,10 @@
                         android:padding="15dp">
 
                         <TextView
-                            android:id="@+id/textView12"
+                            android:id="@+id/textViewCountPayment"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:clickable="true"
                             android:gravity="center"
                             android:text="5"
                             android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -94,9 +95,10 @@
                         android:padding="15dp">
 
                         <TextView
-                            android:id="@+id/textView17"
+                            android:id="@+id/textViewCountReady"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:clickable="true"
                             android:gravity="center"
                             android:text="5"
                             android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -129,9 +131,10 @@
                         android:padding="15dp">
 
                         <TextView
-                            android:id="@+id/textView16"
+                            android:id="@+id/textViewCountProcess"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:clickable="true"
                             android:gravity="center"
                             android:text="5"
                             android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -163,9 +166,10 @@
                         android:padding="15dp">
 
                         <TextView
-                            android:id="@+id/textView18"
+                            android:id="@+id/textViewCountComplete"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:clickable="true"
                             android:gravity="center"
                             android:text="5"
                             android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -207,11 +211,12 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:clickable="true"
                             android:text="주문 취소"
                             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
                         <TextView
-                            android:id="@+id/textView22"
+                            android:id="@+id/textViewCountCancel"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="5건"
@@ -230,11 +235,12 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:clickable="true"
                             android:text="교환 신청"
                             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
                         <TextView
-                            android:id="@+id/textView23"
+                            android:id="@+id/textViewCountChange"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="5건"
@@ -253,11 +259,12 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:clickable="true"
                             android:text="환불 신청"
                             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
                         <TextView
-                            android:id="@+id/textView24"
+                            android:id="@+id/textViewCountReturn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="5건"
@@ -346,7 +353,7 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:id="@+id/imageView"
+                            android:id="@+id/imageViewGuide"
                             android:layout_width="200dp"
                             android:layout_height="match_parent"
                             android:layout_marginEnd="10dp"
@@ -361,14 +368,14 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/textView27"
+                                android:id="@+id/textViewGuideTitle"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="쉽게 따라하는 상품 등록"
                                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
                             <TextView
-                                android:id="@+id/textView26"
+                                android:id="@+id/textViewGuideContent"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="SWIMMER Seller에 상품을 판매해보세요!"
