--- a/Swimmer_seller/app/src/main/res/layout/fragment_main.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_main.xml
@@ -21,6 +21,10 @@
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/bottom_navigation_menu" />
+        android:layout_gravity="bottom"
+        app:layout_insetEdge="bottom"
+        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
+        app:menu="@menu/bottom_navigation_menu"
+        />
 
 </LinearLayout>
